Migrate app to JEE && Update README